<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Speech &amp; Language</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="test_1">test 1</string>
    <string name="test_2">test 2</string>
    <string name="title_activity_settings">Settings</string>
    <string name="app_language">App language:</string>
    <string name="questions_language">Questions language:</string>
    <string name="neuro_leap">Neuro Leap</string>
    <string name="bridge_to">Bridge to Empowerment!</string>
    <string name="win3">WIN 3 System - SLP</string>
    <string name="SpcAndLang"><![CDATA[Speech & Language]]></string>
    <string name="screening">Screening</string>
    <string name="continuing">Continuing</string>
    <string name="newbtn">New</string>
    <string name="student_info">Student Profile:</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="teacher">Teacher</string>
    <string name="age">Age</string>
    <string name="grade">Grade</string>
    <string name="room">Room</string>
    <string name="screenings">Dates of Screenings:</string>
    <string name="hearing">Hearing</string>
    <string name="vision">Vision</string>
    <string name="speach"><![CDATA[Speech & Language]]></string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="vision_title">Date of vision screen.</string>
    <string name="date_of_birth_title">Date of birth.</string>
    <string name="hearing_title">Date of hearing screen.</string>
    <string name="speach_and_language_title">Speech $ Language screening date.</string>
    <string name="error_first_name">Error: Require first name.</string>
    <string name="error_last_name">Error: Require last name.</string>
    <string name="error_date_of_birth">Error: Require date of birth.</string>
    <string name="error_age">Error: require age.</string>
    <string name="error_hearing_to_old">Error: Hearing screen was to long ago.</string>
    <string name="error_vision_to_old">Error: Vision screen was to long ago.</string>
    <string name="error_hearing_required">Date of hearing screen is required.</string>
    <string name="error_vision_required">Error: Date of vision screen is required.</string>
    <string name="error_speach_required"><![CDATA[Error Date of speech & language screen is required.]]></string>
    <string name="scoring_only">Scoring Buttons Only</string>
    <string name="text_only">Text Input Only</string>
    <string name="Both">Both Scoring Buttons and Text Input</string>
    <string name="new_screening">New</string>

    <string-array name="languages">
        <item>English/Ingles</item>
        <item>Espanol/Spanish</item>
    </string-array>

    <string-array name="pass_fail">
        <item>pass</item>
        <item>fail</item>
    </string-array>

    <string-array name="test_mode">
        <item>Text input only</item>
        <item>Text and scoring buttons</item>
    </string-array>

    <string-array name="audio_record">
        <item>On</item>
        <item>Off</item>
    </string-array>

    <string-array name="question_categories">
        <item>Semantics</item>
        <item>Processing</item>
        <item>Inferences</item>
        <item>Idioms</item>
        <item>Syntax</item>
        <item>Auditory Processing</item>
        <item>Auditory Memory</item>
        <item>Unknown</item>
        <item>Unknown</item>
    </string-array>

    <string name="title_activity_start_up">Screens</string>
    <string name="screenings_title">Screenings</string>
    <string name="screening_completed">Completed</string>
    <string name="screening_not_completed">Not completed</string>
    <string name="screening_not_started">Not started</string>
    <string name="student_info_title">Student Profile</string>
    <string name="test_mode_spn">Test mode:</string>
    <string name="years">years</string>
    <string name="months">months</string>
    <string name="cancel">Cancel</string>
    <string name="no_screenings">No screenings.  Press  NEW  to create a new screening.</string>
    <string name="main_menu">Overview</string>
    <string name="overview">Overview</string>
    <string name="questions">Questions</string>
    <string name="results">Results</string>
    <string name="other">Other</string>
    <string name="answer">"Answer "</string>
    <string name="profile">Profile</string>
    <string name="results_summary">Results Summary</string>
    <string name="completed">Completed</string>
    <string name="not_completed">Not completed</string>
    <string name="passed">Passed</string>
    <string name="failed">Failed</string>
    <string name="total">Total</string>
    <string name="audio_record">Audio Record</string>
    <string name="no_sdcard">No SD card installed.  You will not be able to record audio.</string>
    <string name="want_to_continue">Do you want to continue?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="neuro_underscore_leap">/Neuro_Leap/</string>
    <string name="cant_make_dir">Couldn\'t make directory for audio recording. Can\'t record audio</string>
    <string name="cant_prepare">Couldn\'t prepare media recorder.  Can\'t record audio.</string>
    <string name="program_will_record">Program will record audio while in question mode.  Do not go away and leave program in question mode because it will continue to record until the memory is full.</string>
    <string name="ok">OK</string>
    <string name="audio_files">Audio Files</string>
    <string name="no_audio_files">No Audio Files</string>
    <string name="audio_unavailable">No SD Card installed. Audio files are unavailable</string>
    <string name="y_axis_label">Percentage Correct Answers</string>
    <string name="x_axis_label">Question Categories</string>
    <string name="email_report">Email\nReport</string>
    <string name="can_not_generate_report">No SD card installed. Can\'t generate report.</string>
    <string name="Screening_report">Speech and Language Screening Report</string>
    <string name="test_date">"Test Date: "</string>
    <string name="age_at_time">"Age at time of screening: "</string>
    <string name="grade_at_time">"Grade at time of screening: "</string>
    <string name="Date_of_bitth_colon">"Date of Birth: "</string>
    <string name="date_of_hearing">"Date of Hearing Screen: "</string>
    <string name="date_of_vison">"Date of Vision Screen: "</string>
    <string name="screening_not_satrted">Screening hasn\'t been started yet</string>
    <string name="screening_not_complete">Screening is not completed</string>
    <string name="screening_complete">Screening is complete</string>
    <string name="category">Category</string>
    <string name="completion_state">Completion State</string>
    <string name="number_correct">Number Correct</string>
    <string name="percent_correct">Percentage Correct</string>
    <string name="pass_fail">Pass/Fail</string>
    <string name="answer_type">Answer Type</string>
    <string name="type">Type</string>
    <string name="question">Question</string>
    <string name="the_answer">Answer</string>
    <string name="score">Score</string>
    <string name="results_detail">Results Detail</string>
    <string name="icon">Icon</string>
    <string name="text">Text</string>
    <string name="detailed_reports">Detailed Reports</string>
    <string name="delete_file">Delete File?</string>
    <string name="delete_screening">Delete Screening?</string>
    <string name="last_question">This is the last question.</string>

</resources>
