<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="134dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/scoring_only"
            android:id="@+id/btnScoringButtons"
            android:layout_weight="1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/text_only"
            android:id="@+id/btnTexrtOnly"
            android:layout_weight="1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/Both"
            android:id="@+id/btnBoth"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>
