<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/results_summary"
        android:id="@+id/tvResultsSummary"
        style = "@style/TextColor"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/tvStudentName"
        style = "@style/TextColor"
        android:layout_below="@+id/tvResultsSummary"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/dark_grey"
        android:layout_below="@+id/tvStudentName"
        android:id="@+id/view"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:id="@+id/btnProfile"
            style = "@style/TextColor"
            android:layout_weight="1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/screenings_title"
            android:id="@+id/btnScreenings"
            style = "@style/TextColor"
            android:layout_weight="1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            android:id="@+id/btnOverview"
            style = "@style/TextColor"
            android:layout_weight="1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/questions"
            android:id="@+id/btnQuestions"
            style = "@style/TextColor"
            android:layout_weight="1"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_above="@+id/linearLayout"
        android:layout_below="@+id/view">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <com.neuroleap.speachandlanguage.CustomViews.NonScrollListView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lvResultsSummary"
                android:footerDividersEnabled="true"
                android:headerDividersEnabled="false"
                android:dividerHeight="2dp"
                android:layout_alignParentTop="true"
                />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/dark_grey"
                android:layout_below="@+id/lvResultsSummary"
                android:id="@+id/line2"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="30dp"/>

            <com.neuroleap.speachandlanguage.CustomViews.BarChart
                android:layout_below="@+id/line2"
                android:id="@+id/bcQuestionResults"
                android:layout_width="fill_parent"
                android:layout_height="600dp"
                android:layout_marginLeft="18dp"
                custom:yAxisLabel="@string/y_axis_label"
                custom:xAxisLabel="@string/x_axis_label"
                custom:axisLabelTextSize="22dp"
                custom:barLabelTextsize="18dp"
                custom:barTextAngle="45"
                custom:barColor="@color/grey"
                custom:axisColor="@color/dark_grey"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/dark_grey"
                android:layout_below="@+id/bcQuestionResults"
                android:id="@+id/line4"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_below="@+id/line4"
                android:text="@string/audio_files"
                android:layout_centerHorizontal="true"
                style = "@style/TextColor"
                android:id="@+id/tvAudioFiles"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/dark_grey"
                android:layout_below="@+id/tvAudioFiles"
                android:id="@+id/line3"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"/>

            <com.neuroleap.speachandlanguage.CustomViews.NonScrollListView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lvFileNames"
                android:footerDividersEnabled="true"
                android:headerDividersEnabled="false"
                android:dividerHeight="2dp"
                android:layout_below="@+id/line3"/>
        </RelativeLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_report"
        android:id="@+id/btnEmailReport"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        style = "@style/TextColor"/>


</RelativeLayout>
