<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/results_detail"
        android:id="@+id/tvResultsDetail"
        style = "@style/TextColor"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/tvStudentName"
        style = "@style/TextColor"
        android:layout_below="@+id/tvResultsDetail"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/dark_grey"
        android:layout_below="@+id/tvStudentName"
        android:id="@+id/view"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:id="@+id/btnProfile"
            style = "@style/TextColor"
            android:layout_weight="1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/screenings_title"
            android:id="@+id/btnScreenings"
            style = "@style/TextColor"
            android:layout_weight="1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            android:id="@+id/btnOverview"
            style = "@style/TextColor"
            android:layout_weight="1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/questions"
            android:id="@+id/btnQuestions"
            style = "@style/TextColor"
            android:layout_weight="1"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_above="@+id/linearLayout"
        android:layout_below="@+id/view">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                style = "@style/TextColor"
                android:id="@+id/tvCategpryName"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/tvCategpryName"
                android:id="@+id/llTopView">
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
