<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/tvCategory"
        style = "@style/TextColor"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:textStyle="bold"
        android:textSize="26dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCategory"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/question"
            android:id="@+id/textView16"
            android:layout_weight=".5"
            style = "@style/TextColor"
            android:gravity="center_horizontal"
            android:layout_marginRight="5dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/the_answer"
                android:id="@+id/textView18"
                android:layout_weight="0.5"
                style = "@style/TextColor"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/type"
                android:id="@+id/textView17"
                android:layout_weight="0.15"
                style = "@style/TextColor"
                android:gravity="center_horizontal"/>
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/score"
            android:id="@+id/textView19"
            android:layout_weight="0.15"
            style = "@style/TextColor"
            android:gravity="center_horizontal"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/linearLayout3"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llQuestion"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignLeft="@+id/tvCategory"
        android:layout_alignStart="@+id/tvCategory">
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        android:layout_below="@+id/llQuestion"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

</RelativeLayout>